fixed touches on mobile

--- a/style.css
+++ b/style.css
@@ -11,25 +11,3 @@ canvas{
     background-color: #000000;
 }
 
-div{
-    display: inline;
-    margin: 2em auto;
-}
-button{
-    background-color: #000000;
-    color: aliceblue;
-    width: 10em;
-    height: 3em;
-}
-button:hover{
-    background-color: #383535;
-}
-
-#btn-right{
-    border-top-right-radius: 50%;
-    border-bottom-right-radius: 50%;
-}
-#btn-left{
-    border-top-left-radius: 50%;
-    border-bottom-left-radius: 50%;
-}
